--- a/mandelbulber2/qt/custom_formula_editor.ui
+++ b/mandelbulber2/qt/custom_formula_editor.ui
@@ -114,12 +114,39 @@
     </layout>
    </item>
    <item>
+    <widget class="QLabel" name="label_errors">
+     <property name="text">
+      <string>Errors:</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QListWidget" name="listWidget_errors">
+     <property name="sizeAdjustPolicy">
+      <enum>QAbstractScrollArea::AdjustToContents</enum>
+     </property>
+     <property name="resizeMode">
+      <enum>QListView::Fixed</enum>
+     </property>
+     <property name="wordWrap">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="cMyTextEdit" name="textEdit_formula_code">
      <property name="sizeAdjustPolicy">
       <enum>QAbstractScrollArea::AdjustToContents</enum>
      </property>
      <property name="lineWrapMode">
       <enum>QTextEdit::NoWrap</enum>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QLabel" name="label_lineColumn">
+     <property name="text">
+      <string>line 0, column 0</string>
      </property>
     </widget>
    </item>
